iptables設定手順.txt
cd /etc/sysconfig
cp -p iptables iptables.bk_20210107
ll iptables*


vi iptables
-A INPUT -s 34.196.38.94/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.198.27.224/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.198.6.142/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.205.210.199/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.205.219.175/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.205.239.162/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.226.116.82/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.233.153.57/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 35.153.222.175/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 35.169.254.68/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 35.169.43.208/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 35.172.176.62/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 50.17.162.194/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.0.124.201/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.0.33.128/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.202.124.22/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.207.138.122/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.22.162.229/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.3.171.31/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.72.111.249/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.72.211.36/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.87.46.150/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.175.211.84/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.80.120.113/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.194.74.60/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.196.197.189/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.204.219.38/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.205.83.195/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.2.63.133/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.21.149.243/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.44.144.238/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.55.188.35/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.201.199.128/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.206.54.30/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.86.152.157/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.87.173.241/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.192.67.219/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.196.25.105/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.199.44.254/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.204.244.61/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.206.23.113/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.206.95.140/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.206.146.6/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.206.215.233/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.23.102.52/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.54.141.100/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.54.240.176/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.86.2.200/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.192.145.157/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.199.111.255/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.204.221.63/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.206.179.241/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.44.129.132/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.45.95.227/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.55.183.116/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.73.88.81/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.202.143.169/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.206.208.21/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.208.106.230/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.152.108.196/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.85.86.247/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 18.204.77.2/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.84.198.181/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.0.58.66/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.6.19.160/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 18.233.125.165/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.227.134.223/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.73.122.26/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.233.252.54/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.236.163.142/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.44.40.85/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 3.209.15.127/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.70.113.18/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 3.210.118.160/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.175.77.19/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 3.225.117.164/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.224.63.108/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 52.72.213.26/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 18.235.177.174/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 34.203.45.194/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.165.185.17/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.165.185.17/32" -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 123 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 111 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p udp -m udp --dport 323 -j ACCEPT
-A INPUT -p udp -m udp --dport 111 -j ACCEPT
-A INPUT -p udp -m udp --dport 934 -j ACCEPT
-A INPUT -p udp -m udp --dport 5353 -j ACCEPT
-A INPUT -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -p udp -m udp --dport 55827 -j ACCEPT

cat iptables
systemctl status iptables
systemctl enable iptables
systemctl start iptables

systemctl status iptables
